:heavy_plus_sign: select a random word of the array

--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "- [Synopsis](#synopsis)\r - [Description](#description)\r - [Communication](#communication)\r - [Goals](#goals)\r - [Grading](#grading)\r - [Programme](#programme)",
   "main": "main.js",
-
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node main.js",
@@ -21,9 +20,11 @@
   },
   "homepage": "https://github.com/Yolandaokyere/real-time-art#readme",
   "dependencies": {
+    "botbuilder": "^4.16.0",
     "dotenv": "^16.0.0",
     "ejs": "^3.0.2",
     "express": "^4.17.3",
+    "restify": "^8.6.1",
     "socket.io": "^4.4.1"
   }
 }
