--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.0.2",
     "express": "^4.17.3",
+    "node-fetch": "^3.2.6",
     "restify": "^8.6.1",
     "socket.io": "^4.4.1"
   }
